welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:39: error: '<-' expected but ')' found.
 for(x<1 to 6) {
             ^PictureMono2:42: error: illegal start of simple expression
     }
     ^